# docker-tui

./: CHANGELOG.md  README.md  docker-tui.cabal  flake.nix  v1.47.yaml
api-lib/docker /: openapi-docker.cabal
api-lib/docker /OpenAPI/Docker/: Api.hs  Request.hs  Response.hs
api-lib/docker /OpenAPI/Docker/Response/: BuildPrune.hs  ConfigCreate.hs  ConfigDelete.hs  ConfigInspect.hs  ConfigList.hs  ConfigUpdate.hs  ContainerArchive.hs  ContainerArchiveInfo.hs  ContainerAttach.hs  ContainerAttachWebsocket.hs  ContainerChanges.hs  ContainerCreate.hs  ContainerDelete.hs  ContainerExec.hs  ContainerExport.hs  ContainerInspect.hs  ContainerKill.hs  ContainerList.hs  ContainerLogs.hs  ContainerPause.hs  ContainerPrune.hs  ContainerRename.hs  ContainerResize.hs  ContainerRestart.hs  ContainerStart.hs  ContainerStats.hs  ContainerStop.hs  ContainerTop.hs  ContainerUnpause.hs  ContainerUpdate.hs  ContainerWait.hs  DistributionInspect.hs  ExecInspect.hs  ExecResize.hs  ExecStart.hs  GetPluginPrivileges.hs  ImageBuild.hs  ImageCommit.hs  ImageCreate.hs  ImageDelete.hs  (+67 more)
api-lib/docker /OpenAPI/Docker/Schemas/: Address.hs  AuthConfig.hs  BuildCache.hs  ChangeType.hs  ClusterInfo.hs  ClusterVolume.hs  ClusterVolumeSpec.hs  Commit.hs  Config.hs  ConfigReference.hs  ConfigSpec.hs  ContainerConfig.hs  ContainerCreateResponse.hs  ContainerState.hs  ContainerStatus.hs  ContainerSummary.hs  ContainerWaitExitError.hs  ContainerWaitResponse.hs  ContainerdInfo.hs  DeviceMapping.hs  DeviceRequest.hs  DistributionInspect.hs  Driver.hs  DriverData.hs  EndpointIPAMConfig.hs  EndpointPortConfig.hs  EndpointSettings.hs  EndpointSpec.hs  EngineDescription.hs  ErrorResponse.hs  EventActor.hs  EventMessage.hs  FilesystemChange.hs  GenericResources.hs  Health.hs  HealthConfig.hs  HealthcheckResult.hs  HostConfig.hs  IPAM.hs  IPAMConfig.hs  (+69 more)
src/Docker/: Api.hs  Tui.hs
