cabal-version: 3.0
name: openapi-docker
version: 0.1.0.0
library
  build-depends:
    , aeson
    , attoparsec
    , base
    , bytestring
    , containers
    , ghc-prim
    , http-api-data
    , http-media
    , http-types
    , text
    , time
    , unordered-containers
    , wai
  exposed-modules:
    OpenAPI.Docker.Api
    OpenAPI.Docker.Request
    OpenAPI.Docker.Response
    OpenAPI.Docker.Response.BuildPrune
    OpenAPI.Docker.Response.ConfigCreate
    OpenAPI.Docker.Response.ConfigDelete
    OpenAPI.Docker.Response.ConfigInspect
    OpenAPI.Docker.Response.ConfigList
    OpenAPI.Docker.Response.ConfigUpdate
    OpenAPI.Docker.Response.ContainerArchive
    OpenAPI.Docker.Response.ContainerArchiveInfo
    OpenAPI.Docker.Response.ContainerAttach
    OpenAPI.Docker.Response.ContainerAttachWebsocket
    OpenAPI.Docker.Response.ContainerChanges
    OpenAPI.Docker.Response.ContainerCreate
    OpenAPI.Docker.Response.ContainerDelete
    OpenAPI.Docker.Response.ContainerExec
    OpenAPI.Docker.Response.ContainerExport
    OpenAPI.Docker.Response.ContainerInspect
    OpenAPI.Docker.Response.ContainerKill
    OpenAPI.Docker.Response.ContainerList
    OpenAPI.Docker.Response.ContainerLogs
    OpenAPI.Docker.Response.ContainerPause
    OpenAPI.Docker.Response.ContainerPrune
    OpenAPI.Docker.Response.ContainerRename
    OpenAPI.Docker.Response.ContainerResize
    OpenAPI.Docker.Response.ContainerRestart
    OpenAPI.Docker.Response.ContainerStart
    OpenAPI.Docker.Response.ContainerStats
    OpenAPI.Docker.Response.ContainerStop
    OpenAPI.Docker.Response.ContainerTop
    OpenAPI.Docker.Response.ContainerUnpause
    OpenAPI.Docker.Response.ContainerUpdate
    OpenAPI.Docker.Response.ContainerWait
    OpenAPI.Docker.Response.DistributionInspect
    OpenAPI.Docker.Response.ExecInspect
    OpenAPI.Docker.Response.ExecResize
    OpenAPI.Docker.Response.ExecStart
    OpenAPI.Docker.Response.GetPluginPrivileges
    OpenAPI.Docker.Response.ImageBuild
    OpenAPI.Docker.Response.ImageCommit
    OpenAPI.Docker.Response.ImageCreate
    OpenAPI.Docker.Response.ImageDelete
    OpenAPI.Docker.Response.ImageGet
    OpenAPI.Docker.Response.ImageGetAll
    OpenAPI.Docker.Response.ImageHistory
    OpenAPI.Docker.Response.ImageInspect
    OpenAPI.Docker.Response.ImageList
    OpenAPI.Docker.Response.ImageLoad
    OpenAPI.Docker.Response.ImagePrune
    OpenAPI.Docker.Response.ImagePush
    OpenAPI.Docker.Response.ImageSearch
    OpenAPI.Docker.Response.ImageTag
    OpenAPI.Docker.Response.NetworkConnect
    OpenAPI.Docker.Response.NetworkCreate
    OpenAPI.Docker.Response.NetworkDelete
    OpenAPI.Docker.Response.NetworkDisconnect
    OpenAPI.Docker.Response.NetworkInspect
    OpenAPI.Docker.Response.NetworkList
    OpenAPI.Docker.Response.NetworkPrune
    OpenAPI.Docker.Response.NodeDelete
    OpenAPI.Docker.Response.NodeInspect
    OpenAPI.Docker.Response.NodeList
    OpenAPI.Docker.Response.NodeUpdate
    OpenAPI.Docker.Response.PluginCreate
    OpenAPI.Docker.Response.PluginDelete
    OpenAPI.Docker.Response.PluginDisable
    OpenAPI.Docker.Response.PluginEnable
    OpenAPI.Docker.Response.PluginInspect
    OpenAPI.Docker.Response.PluginList
    OpenAPI.Docker.Response.PluginPull
    OpenAPI.Docker.Response.PluginPush
    OpenAPI.Docker.Response.PluginSet
    OpenAPI.Docker.Response.PluginUpgrade
    OpenAPI.Docker.Response.PutContainerArchive
    OpenAPI.Docker.Response.SecretCreate
    OpenAPI.Docker.Response.SecretDelete
    OpenAPI.Docker.Response.SecretInspect
    OpenAPI.Docker.Response.SecretList
    OpenAPI.Docker.Response.SecretUpdate
    OpenAPI.Docker.Response.ServiceCreate
    OpenAPI.Docker.Response.ServiceDelete
    OpenAPI.Docker.Response.ServiceInspect
    OpenAPI.Docker.Response.ServiceList
    OpenAPI.Docker.Response.ServiceLogs
    OpenAPI.Docker.Response.ServiceUpdate
    OpenAPI.Docker.Response.Session
    OpenAPI.Docker.Response.SwarmInit
    OpenAPI.Docker.Response.SwarmInspect
    OpenAPI.Docker.Response.SwarmJoin
    OpenAPI.Docker.Response.SwarmLeave
    OpenAPI.Docker.Response.SwarmUnlock
    OpenAPI.Docker.Response.SwarmUnlockkey
    OpenAPI.Docker.Response.SwarmUpdate
    OpenAPI.Docker.Response.SystemAuth
    OpenAPI.Docker.Response.SystemDataUsage
    OpenAPI.Docker.Response.SystemEvents
    OpenAPI.Docker.Response.SystemInfo
    OpenAPI.Docker.Response.SystemPing
    OpenAPI.Docker.Response.SystemPingHead
    OpenAPI.Docker.Response.SystemVersion
    OpenAPI.Docker.Response.TaskInspect
    OpenAPI.Docker.Response.TaskList
    OpenAPI.Docker.Response.TaskLogs
    OpenAPI.Docker.Response.VolumeCreate
    OpenAPI.Docker.Response.VolumeDelete
    OpenAPI.Docker.Response.VolumeInspect
    OpenAPI.Docker.Response.VolumeList
    OpenAPI.Docker.Response.VolumePrune
    OpenAPI.Docker.Response.VolumeUpdate
    OpenAPI.Docker.Schemas.Address
    OpenAPI.Docker.Schemas.AuthConfig
    OpenAPI.Docker.Schemas.BuildCache
    OpenAPI.Docker.Schemas.ChangeType
    OpenAPI.Docker.Schemas.ClusterInfo
    OpenAPI.Docker.Schemas.ClusterVolume
    OpenAPI.Docker.Schemas.ClusterVolumeSpec
    OpenAPI.Docker.Schemas.Commit
    OpenAPI.Docker.Schemas.Config
    OpenAPI.Docker.Schemas.ConfigReference
    OpenAPI.Docker.Schemas.ConfigSpec
    OpenAPI.Docker.Schemas.ContainerConfig
    OpenAPI.Docker.Schemas.ContainerCreateResponse
    OpenAPI.Docker.Schemas.ContainerState
    OpenAPI.Docker.Schemas.ContainerStatus
    OpenAPI.Docker.Schemas.ContainerSummary
    OpenAPI.Docker.Schemas.ContainerWaitExitError
    OpenAPI.Docker.Schemas.ContainerWaitResponse
    OpenAPI.Docker.Schemas.ContainerdInfo
    OpenAPI.Docker.Schemas.DeviceMapping
    OpenAPI.Docker.Schemas.DeviceRequest
    OpenAPI.Docker.Schemas.DistributionInspect
    OpenAPI.Docker.Schemas.Driver
    OpenAPI.Docker.Schemas.DriverData
    OpenAPI.Docker.Schemas.EndpointIPAMConfig
    OpenAPI.Docker.Schemas.EndpointPortConfig
    OpenAPI.Docker.Schemas.EndpointSettings
    OpenAPI.Docker.Schemas.EndpointSpec
    OpenAPI.Docker.Schemas.EngineDescription
    OpenAPI.Docker.Schemas.ErrorResponse
    OpenAPI.Docker.Schemas.EventActor
    OpenAPI.Docker.Schemas.EventMessage
    OpenAPI.Docker.Schemas.FilesystemChange
    OpenAPI.Docker.Schemas.GenericResources
    OpenAPI.Docker.Schemas.Health
    OpenAPI.Docker.Schemas.HealthConfig
    OpenAPI.Docker.Schemas.HealthcheckResult
    OpenAPI.Docker.Schemas.HostConfig
    OpenAPI.Docker.Schemas.IPAM
    OpenAPI.Docker.Schemas.IPAMConfig
    OpenAPI.Docker.Schemas.IdResponse
    OpenAPI.Docker.Schemas.ImageConfig
    OpenAPI.Docker.Schemas.ImageDeleteResponseItem
    OpenAPI.Docker.Schemas.ImageInspect
    OpenAPI.Docker.Schemas.ImageManifestSummary
    OpenAPI.Docker.Schemas.ImageSummary
    OpenAPI.Docker.Schemas.IndexInfo
    OpenAPI.Docker.Schemas.JoinTokens
    OpenAPI.Docker.Schemas.Limit
    OpenAPI.Docker.Schemas.LocalNodeState
    OpenAPI.Docker.Schemas.ManagerStatus
    OpenAPI.Docker.Schemas.Mount
    OpenAPI.Docker.Schemas.MountPoint
    OpenAPI.Docker.Schemas.Network
    OpenAPI.Docker.Schemas.NetworkAttachmentConfig
    OpenAPI.Docker.Schemas.NetworkContainer
    OpenAPI.Docker.Schemas.NetworkCreateResponse
    OpenAPI.Docker.Schemas.NetworkSettings
    OpenAPI.Docker.Schemas.NetworkingConfig
    OpenAPI.Docker.Schemas.Node
    OpenAPI.Docker.Schemas.NodeDescription
    OpenAPI.Docker.Schemas.NodeSpec
    OpenAPI.Docker.Schemas.NodeState
    OpenAPI.Docker.Schemas.NodeStatus
    OpenAPI.Docker.Schemas.OCIDescriptor
    OpenAPI.Docker.Schemas.OCIPlatform
    OpenAPI.Docker.Schemas.ObjectVersion
    OpenAPI.Docker.Schemas.PeerInfo
    OpenAPI.Docker.Schemas.PeerNode
    OpenAPI.Docker.Schemas.Platform
    OpenAPI.Docker.Schemas.Plugin
    OpenAPI.Docker.Schemas.PluginDevice
    OpenAPI.Docker.Schemas.PluginEnv
    OpenAPI.Docker.Schemas.PluginInterfaceType
    OpenAPI.Docker.Schemas.PluginMount
    OpenAPI.Docker.Schemas.PluginPrivilege
    OpenAPI.Docker.Schemas.PluginsInfo
    OpenAPI.Docker.Schemas.Port
    OpenAPI.Docker.Schemas.PortBinding
    OpenAPI.Docker.Schemas.PortMap
    OpenAPI.Docker.Schemas.PortStatus
    OpenAPI.Docker.Schemas.ProcessConfig
    OpenAPI.Docker.Schemas.Reachability
    OpenAPI.Docker.Schemas.RegistryServiceConfig
    OpenAPI.Docker.Schemas.ResourceObject
    OpenAPI.Docker.Schemas.Resources
    OpenAPI.Docker.Schemas.RestartPolicy
    OpenAPI.Docker.Schemas.Runtime
    OpenAPI.Docker.Schemas.Secret
    OpenAPI.Docker.Schemas.SecretSpec
    OpenAPI.Docker.Schemas.Service
    OpenAPI.Docker.Schemas.ServiceCreateResponse
    OpenAPI.Docker.Schemas.ServiceSpec
    OpenAPI.Docker.Schemas.ServiceUpdateResponse
    OpenAPI.Docker.Schemas.Swarm
    OpenAPI.Docker.Schemas.SwarmInfo
    OpenAPI.Docker.Schemas.SwarmSpec
    OpenAPI.Docker.Schemas.SystemInfo
    OpenAPI.Docker.Schemas.SystemVersion
    OpenAPI.Docker.Schemas.TLSInfo
    OpenAPI.Docker.Schemas.Task
    OpenAPI.Docker.Schemas.TaskSpec
    OpenAPI.Docker.Schemas.TaskState
    OpenAPI.Docker.Schemas.TaskStatus
    OpenAPI.Docker.Schemas.ThrottleDevice
    OpenAPI.Docker.Schemas.Topology
    OpenAPI.Docker.Schemas.Volume
    OpenAPI.Docker.Schemas.VolumeCreateOptions
    OpenAPI.Docker.Schemas.VolumeListResponse